--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
 <h1>Projetos da Milene Toda</h1>
 <ul>
+    <li><a href="/restaurantes" target="_blank">Sorteador Restaurantes</a></li>
     <li><a href="/Silph/index.html" target="_blank">Silph Ranking BR</a></li>
     <li><a href="/anticog/" target="_blank">Calculadora Anti Coagulação</a></li>
     <li><a href="/howold/" target="_blank">Quantos anos você tem?</a></li>
