--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 <style>
     body{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-image: url(https://lh3.googleusercontent.com/iKPdpP3KG6aekXnt-AHc8HPI4wvA3TPd_e0TohwMaP2fVQbAG-MohD_ULCPl_M9JYGqPAwGf7eHGRacH7fXM-ZA4QKtkDP0XShcD3Xnr_fONrBstKCLd8YCEr9-aUI1Y0WPkKE5kGjBszOmA2SQJS05wx2ZwU-NUYZyNe02Y0ndwqjznq3I8u1g-wMo9ve37pLz8EHHJnW1_wLqSvA3JQ427z8eb_aGkyWGmE38kzxgJSRcFbtrwQelxJaod4FnGkqydTcuL8KSnWcUwqcfRlneA-DvAvAvnFz1H-r76Ek0XSp6wQcTcfIOa50E1PJNVVwIiMyKc8-cqTiDUgZSyi8iB7DdzD1yY5hrO1BPsPtjJID88TuPe48Q4b8tlke1qPP0fykalX3oYXl70iDYD7Kfc5YapQi5mbGDsk2n8QyRE2oy2gxDogF7RVWVkkz1siAxWwX3j62XDxzoNdRcUlTRdNqDNCbywITSzZ_bjRgYLtj7d9wsBLhOufEIkKholr0N6c5HQLOcFcvosu77zkaljJ5v_N7i7gFPLUfrDGd2djmTBmphJ5ytjxV-lZjUzfRaGnukw_fQ9e9QmPCLObGhP1iSTEmpQbljFwSVHQd-FH4Hja2SdBIaNjEQyMXO6INrQ3gRtiy6JVo0hoPMi68sWbICtaj6gDh43VbpLIlsjBgSz_uDfNziucnWQi_6KTLbHkn1uKWcA7hN_FmFoJHZL3Qyxw4i3x2RELPt-6zEsK8OtyeARzsKr-JXmTNzSldBSZc5bnAAC52zlgEbXlC9sBKmbswaLZQ=w1274-h955-no?authuser=0);
+        background-size: cover;
+        background-repeat: repeat-y;
+        background-position: center;
     }
     h1{
         margin-top: 40px;
         text-align: center;
+        text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, -2px -2px 0 #000000, 2px 0px 0 #000000, 0px 2px 0 #000000, -2px 0px 0 #000000, 0px -2px 0 #000000, 0px 1px 6px rgba(78,255,70,0);
+        color: #FFFFFF;
         
     }
     ul{
@@ -19,11 +25,21 @@
         list-style: none;        
         padding-left: 0;        
         font-size: 20px;
+        background-color: rgba(200,200,200,0.5);
+        max-width: 400px;
+        margin: auto;
+        padding: 5px 0;
     }
 
     li{
         margin: 15px;
     }
+    
+    a{
+        color: 000;
+        text-decoration: none;
+        text-shadow: 0 0 10px #fff;
+        }
 
 
 </style>
