--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
     
     a{
         color: 000;
-        text-decoration: none;
-        text-shadow: 0 0 10px #fff;
+        text-shadow: 0 0 10px #fff;        
         }
+    
+    a:visited{
+        text-decoration-color: #551a8b;
+    }
 
 
 </style>
