--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <body>
 <h1>Projetos da Milene Toda</h1>
 <ul>
+    <li><a href="/compara-preco/" target="_blank">Comparador de preços</a></li>
     <li><a href="/restaurantes" target="_blank">Sorteador Restaurantes</a></li>
     <li><a href="/relogio24h/" target="_blank">Relógio de ponteiro de 24h</a></li>
     <li><a href="/howold/" target="_blank">Quantos anos você tem?</a></li>
